--- a/index.html
+++ b/index.html
@@ -9,28 +9,26 @@
 </head>
 
 <body>
-<article class="">
-  <section>
-  </section>
-  <section>
-    <p>An interactive VR site for the generation of customised glitching patterns.</p>
-  </section>
-</article>
-
-<h1>Glitch Room</h1>
-<img src="img/glitch-room-1.jpg" alt="">
-<p></p>
-
-<article class="top-border">
-  <section>
-    <p>Project Description</p>
-  </section>
-  <section>
+<nav>
+  <p>Nora Zhao</p>
+  <h2>Coding</h2>
+  <p>Glitch Room V3 <br>
+  Glitch Room V2 <br>
+  Glitch Room V1 <br>
+  Mouse XY <br>
+  </p>
+</nav>
+<main>
+  <p>An interactive VR site for the generation of customised glitching patterns.</p>
+  <h1>Glitch Room</h1>
+  <img src="img/glitch-room-1.jpg" alt="">
+  <p></p>
+  <h2>Project Description</h2>
+  <div class="indent">
     <p>Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.</p>
     <p>The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.</p>
     <p>A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output. The digital platform enables the audience to create and experience a unique artwork which they personally devised.</p>
-  </section>
-</article>
-
+  </div>
+</main>
 </body>
 </html>
