--- a/404.html
+++ b/404.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-<main class="desktop2ColMobile1Col">
-  <!--left col-->
+<article>
   <section>
   </section>
-  <!--right col-->
   <section>
-    <h1>404 Page Not Found</h1>
+    <p>This link is invalid. Please click <a href="index.html">here</a> to visit the home page.</p>
   </section>
-</main>
+</article>
+
+<h1>404<br>Page Not Found</h1>
 </body>
 </html>
