--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-<article>
+<main>
   <section>
     <h2>Menu</h2>
   </section>
   <section>
-    <p  style="margin: 0 0 10px 0;">An interactive VR site for the generation of customised glitching patterns.</p>
+    <p style="margin: 0 0 10px 0;">An interactive VR site for the generation of customised glitching patterns.</p>
     <p lang="zh">可生成自定义的故障图样的交互式虚拟现实网站。</p>
   </section>
-</article>
+</main>
 
 <h1>Glitch Room</h1>
 <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe>
 
-<article>
+<main>
   <section>
     <h2>Project Description</h2>
   </section>
@@ -30,9 +30,9 @@
     <p>Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.</p>
     <p>The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.</p>
     <p>A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.</p>
-    <p lang="zh">故障房间是一个交互式网站，用户可以设计三维模型并通过虚拟现实来观赏体验，也可以访问和重新设计现有模型。该项目在故障艺术这一领域进行了探索。它以计算机代码为设计媒介，以深度缓冲噪音为方法，将在每毫秒生成的独特的图样以闪烁的效果展示在用户的电子设备屏幕上。网站通过植入用户可调节设定的控制面板实现几何模型自定义，而三维模型渲染机制则能生成适应设备及屏幕尺寸的个性化图形输出。二者结合起来，该项目则同时实现了自定义以及个性化。</p>
+    <p lang="zh">故障房间是一个交互式网站，用户可以设计三维模型并通过虚拟现实来观赏体验，也可以访问和重新设计现有模型。该项目在故障艺术这一领域进行了探索。它以计算机代码为设计媒介，以深度缓冲噪音为方法，将在每毫秒生成的独特的图样以闪烁的效果展示在用户的电子设备屏幕上。网站通过植入用户可调节设定的控制面板实现几何模型自定义，而三维模型渲染机制则能生成适应设备及屏幕尺寸的个性化图形输出。 二者结合使该项目同时实现了自定义及个性化。</p>
   </section>
-</article>
+</main>
 
 </body>
 </html>
