type adjustment & combine css sheets

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nora Zhao · Graphic Designer 赵子娴 · 平面设计师</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="stylesheet" type="text/css" href="css/styles-class.css">
+<title>Nora Zhao 赵子娴 · Graphic Designer 平面设计师</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -15,7 +14,7 @@
     <h2 lang="zh">目录</h2>
   </section>
   <section>
-    <p style="margin: 0 0 10px 0;">An interactive VR site for the generation of customised glitching patterns.</p>
+    <p>An interactive VR site for the generation of customised glitching patterns.</p>
     <p lang="zh">可生成自定义的故障图样的交互式虚拟现实网站。</p>
   </section>
 </main>
@@ -30,9 +29,9 @@
     <h2 lang="zh">项目概述</h2>
   </section>
   <section>
-    <p>Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.</p>
-    <p>The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.</p>
-    <p>A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.</p>
+    <p>Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.<br>
+    The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.<br>
+    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.<br></p>
     <p lang="zh">故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果来呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。</p>
   </section>
 </main>
