--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Nora Zhao · Graphic Designer</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="stylesheet" type="text/css" href="css/styles-class.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-<article>
+<main>
   <section>
   </section>
   <section>
     <p>This link is invalid. Please click <a href="index.html">here</a> to visit the home page.</p>
+    <p lang="zh">无法找到该页面，请<a href="index.html">点此</a>跳转到网站主页。</p>
   </section>
-</article>
+</main>
 
-<h1>404<br>Page Not Found</h1>
+<h1>404 Page Not Found</h1>
 </body>
 </html>
