--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Nora Zhao 赵子娴 · Graphic Designer 平面设计师</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<script src="js/jquery.min.js"></script>
 </head>
 
 <body>
-<main>
+<div id="sidenav"></div>
+<script type="text/javascript">
+$(function(){
+  $("#sidenav").load("sidenav.html");
+});
+</script>
+
+<main id="main">
+<article>
   <section>
-    <h2>Menu</h2>
-    <h2 lang="zh">目录</h2>
+    <a href="#" onclick="openNav()">
+      <img src="img/menu.svg" alt="Menu" style="width: 1.8vmax;">
+    </a>
   </section>
   <section>
     <p>An interactive VR site for the generation of customised glitching patterns.</p>
     <p lang="zh">可生成自定义的故障图样的交互式虚拟现实网站。</p>
   </section>
-</main>
+</article>
 
 <h1>Glitch Room</h1>
 <h1 lang="zh">故障房间</h1>
 <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe>
 
-<main>
+<article>
   <section>
     <h2>Project Description</h2>
     <h2 lang="zh">项目概述</h2>
@@ -34,6 +44,7 @@
     A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.<br></p>
     <p lang="zh">故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果来呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。</p>
   </section>
+</article>
 </main>
 
 </body>
