--- a/sidenav.html
+++ b/sidenav.html
@@ -32,7 +32,7 @@
     position: fixed; /* stay in place */
     top: 0;
     left: 0;
-    background-color: yellow;
+    background-color: lavender;
     overflow-x: hidden; /* disable horizontal scroll */
     transition: 0.8s; /* 0.5 second transition effect to slide in the sidenav */
   }
