--- a/glitch-room.html
+++ b/glitch-room.html
@@ -24,13 +24,13 @@ $(function(){
     </a>
   </section>
   <section>
-    <p>Hello there, welcome to my portfolio site.</p>
-    <p lang="zh">你好，欢迎访问我的作品集网站。</p>
+    <p>An interactive VR site for the generation of customised glitching patterns.</p>
+    <p lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
   </section>
 </article>
 
-<h1>Nora Zhao</h1>
-<h1 lang="zh">赵子娴</h1>
+<h1>Glitch Room</h1>
+<h1 lang="zh">故障房间</h1>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
 <img src="img/glitch-room-1.png" alt="">
 
