--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@ $(function(){
   </section>
 </article>
 
+<!-- <h1>Nora Zhao<p lang="zh" class="inline">赵子娴</p></h1> -->
 <h1>Nora Zhao</h1>
 <h1 lang="zh">赵子娴</h1>
-<!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
-<img src="img/glitch-room-1.png" alt="">
+<img src="img/glitch-room-2.png" alt="">
 
 <article>
   <section>
-    <h2>Project Description</h2>
-    <h2 lang="zh">项目概述</h2>
+    <h2>About Me</h2>
+    <h2 lang="zh" class="inline">关于我</h2>
   </section>
   <section>
-    <p>Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.<br>
-    The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.<br>
-    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.<br></p>
-    <p lang="zh">故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。</p>
+    <p>My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found in the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.<br>
+    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communications (merit, 2018) and an master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.<br></p>
+    <p lang="zh">我是赵子娴，一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我探索和实践的领域为衍生式设计、品牌设计和传统平面设计等，擅长以创意艺术编程的方法完成批量式随机图形的生成。<br>
+    我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学的视觉传达设计研究生文凭（2018）和平面媒体设计硕士学位（2020）。</p>
   </section>
 </article>
 </main>
