--- a/sidenav.html
+++ b/sidenav.html
@@ -7,7 +7,7 @@
     </a>
   <p>
   <!-- contents -->
-  <p><a href="index.html">Home Page</a></p>
+  <p><a href="index.html">Home Page 主页</a></p>
   <br>
   <p>Coding Projects:</p>
   <p><a href="glitch-room.html">Glitch Room</a></p>
