--- a/index.html
+++ b/index.html
@@ -24,26 +24,33 @@ $(function(){
     </a>
   </section>
   <section>
-    <p>Hello there, welcome to my portfolio site.</p>
-    <p lang="zh">你好，欢迎访问我的作品集网站。</p>
+    <p>Hello there, welcome to my portfolio site.
+      <span lang="zh">你好，欢迎访问我的作品集网站。</span>
+    </p>
   </section>
 </article>
 
 <!-- <h1>Nora Zhao<p lang="zh" class="inline">赵子娴</p></h1> -->
-<h1>Nora Zhao</h1>
-<h1 lang="zh">赵子娴</h1>
+<h1>Nora Zhao
+  <br style="margin-bottom: 0;">
+  <span lang="zh">赵子娴</span>
+</h1>
 <img src="img/glitch-room-2.png" alt="">
 
 <article>
   <section>
-    <h2>About Me</h2>
-    <h2 lang="zh" class="inline">关于我</h2>
+    <h2>About Me <span lang="zh">个人简介</span></h2>
   </section>
   <section>
-    <p>My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found in the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.<br>
-    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communications (merit, 2018) and an master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.<br></p>
-    <p lang="zh">我是赵子娴，一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我探索和实践的领域为衍生式设计、品牌设计和传统平面设计等，擅长以创意艺术编程的方法生成批量式随机图形。<br>
-    我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学的视觉传达设计研究生文凭（2018）和平面媒体设计硕士学位（2020）。</p>
+    <p>
+      My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found in the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+      <br>
+      I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communications (merit, 2018) and an master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
+      <br>
+      <span lang="zh">
+        我是赵子娴，一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我探索和实践的领域为衍生式设计、品牌设计和传统平面设计等，擅长以创意艺术编程的方法生成批量式随机图形。我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学的视觉传达设计研究生文（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
+      </span>
+    </p>
   </section>
 </article>
 </main>
