--- a/sidenav.html
+++ b/sidenav.html
@@ -7,19 +7,36 @@
     </a>
   <p>
   <!-- contents -->
-  <p><a href="index.html">Home Page 主页</a></p>
+  <p>
+    <a href="index.html">
+      Home Page
+      <span lang="zh">「主页」</span>
+    </a>
+  </p>
   <br>
-  <p>Coding Projects:</p>
-  <p><a href="glitch-room.html">Glitch Room</a></p>
+  <p>Coding Projects <span lang="zh">「编程设计」</span></p>
+  <p>
+    <a href="glitch-room.html">
+      Glitch Room
+      <span lang="zh">「故障房间」</span>
+    </a>
+  </p>
   <br>
-  <p>Branding Projects:</p>
-  <p><a href="#"></a></p>
+  <p>Branding Projects <span lang="zh">「品牌设计」</span></p>
+  <p>
+    <a href="#"></a>
+  </p>
   <br>
-  <p>Design Projects:</p>
+  <p>Design Projects <span lang="zh">「平面设计」</span></p>
   <br>
-  <p>Playground:</p>
+  <p>Playground <span lang="zh">「其他」</span></p>
   <br>
-  <p><a href="#">About and Contact</a></p>
+  <p>
+    <a href="#">
+      About and Contact
+      <span lang="zh">「简介及联系方式」</span>
+    </a>
+  </p>
 </div>
 
 <!-- css -------------------------------------------------------------------- -->
