--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@ $(function(){
 </article>
 
 <!-- <h1>Nora Zhao<p lang="zh" class="inline">赵子娴</p></h1> -->
-<h1>Nora Zhao
-  <br style="margin-bottom: 0;">
-  <span lang="zh">赵子娴</span>
-</h1>
+<h1>Nora Zhao</h1>
+<h1 lang="zh">赵子娴</h1>
+
 <img src="img/glitch-room-2.png" alt="">
 
 <article>
@@ -47,9 +46,9 @@ $(function(){
       <br>
       I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communications (merit, 2018) and an master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
       <br>
-      <span lang="zh">
-        我是赵子娴，一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我探索和实践的领域为衍生式设计、品牌设计和传统平面设计等，擅长以创意艺术编程的方法生成批量式随机图形。我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学的视觉传达设计研究生文凭（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
-      </span>
+    </p>
+    <p lang="zh">
+      我叫赵子娴，是一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目：我所探索和实践的领域为衍生式设计、品牌设计和传统平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
     </p>
   </section>
 </article>
