--- a/glitch-room.html
+++ b/glitch-room.html
@@ -16,67 +16,55 @@ $(function(){
 });
 </script>
 
-<main id="main">
-<article>
-  <section>
-    <a href="#" onclick="openNav()">
-      <img src="img/menu.svg" alt="Menu" style="width: 1.8vmax;">
-    </a>
-  </section>
-  <section>
-    <p>An interactive VR site for the generation of customised glitching patterns.
-      <span lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</span>
-    </p>
-  </section>
-</article>
+<div>
+  <a href="#" onclick="openNav()">
+    <img class="menuBtn" src="img/menu.svg" alt="Menu">
+  </a>
+</div>
+
+<section>
+  <p>An interactive VR site for the generation of customised glitching patterns.
+    <span lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</span>
+  </p>
+</section>
 
 <h1>Glitch Room</h1>
 <h1 lang="zh">故障房间</h1>
+<br>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
 <img src="img/glitch-room-1.png" alt="">
 
-<article>
-  <section>
-    <h2>Info <span lang="zh">项目信息</span></h2>
-  </section>
-  <section>
-    <p class="list">
-      Self-Initiated Project
-      <span lang="zh">「自主项目」</span>
-      <br>
-      Role: Researcher, Designer, Coder
-      <span lang="zh">「角色：调研、设计、编程」</span>
-      <br>
-      Location: London
-      <span lang="zh">「地点：伦敦」</span>
-      <br>
-      Year: 2019
-      <span lang="zh">「时间：<span lang="en">2019 </span>年」</span>
-    </p>
-  </section>
-</article>
+<section>
+  <h2>Info <span lang="zh">项目信息</span></h2>
+  <p class="list">
+    Self-Initiated Project
+    <span lang="zh">「自主项目」</span>
+    <br>
+    Role: Researcher, Designer, Coder
+    <span lang="zh">「角色：调研、设计、编程」</span>
+    <br>
+    Location: London
+    <span lang="zh">「地点：伦敦」</span>
+    <br>
+    Year: 2019
+    <span lang="zh">「时间：<span lang="en">2019 </span>年」</span>
+  </p>
 
-<article>
-  <section>
-    <h2>Project Description <span lang="zh">项目概述</span></h2>
-  </section>
-  <section>
-    <p>
-      Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
-      <br>
-      The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
-      <br>
-      A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
-      <br>
-    </p>
-    <p lang="zh">
-      故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
-      <br>
-      该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
-    </p>
-  </section>
-</article>
-</main>
+  <h2>Project Description <span lang="zh">项目概述</span></h2>
+  <p>
+    Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
+    <br>
+    The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
+    <br>
+    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
+    <br>
+  </p>
+  <p lang="zh">
+    故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
+    <br>
+    该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
+  </p>
+</section>
 
 </body>
 </html>
