--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@ $(function(){
 });
 </script>
 
-<div>
-  <a href="#" onclick="openNav()">
-    <img class="menuBtn" src="img/menu.svg" alt="Menu">
-  </a>
-</div>
-
 <section>
   <p>Hello there, welcome to my portfolio site.
     <span lang="zh">你好，欢迎访问我的作品集网站。</span>
@@ -37,7 +31,7 @@ $(function(){
   <p>
     My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found in the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
     <br>
-    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communications (merit, 2018) and an master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
+    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communication Design (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
     <br>
   </p>
   <p lang="zh">
