--- a/404.html
+++ b/404.html
@@ -3,19 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nora Zhao 赵子娴 · Graphic Designer 平面设计师</title>
+<title>NORA ZHAO 赵子娴「404」</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<script src="js/jquery.min.js"></script>
 </head>
 
 <body>
-<article>
-  <section>
-  </section>
-  <section>
-    <p>This link is invalid. Please click <a href="index.html">here</a> to visit the home page.</p>
-    <p lang="zh">无法找到该页面，请<a href="index.html">点此</a>访问网站主页。</p>
-  </section>
-</article>
+<div id="sidenav"></div>
+<script type="text/javascript">
+$(function(){
+  $("#sidenav").load("sidenav.html");
+});
+</script>
+
+<section>
+  <p>
+    This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
+    <span lang="zh">无法找到该页面，请<a href="index.html">点此</a>访问网站主页。</span>
+  </p>
+</section>
 
 <h1>404 Page Not Found</h1>
 </body>
