--- a/glitch-room.html
+++ b/glitch-room.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nora Zhao 赵子娴 · Graphic Designer 平面设计师</title>
+<title>NORA ZHAO 赵子娴「GLITCH ROOM 故障房间」</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
