fix menu icon bug on iphone (not showing)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-<div id="sidenav"></div>
+<div id="navigation"></div>
 <script type="text/javascript">
 $(function(){
-  $("#sidenav").load("sidenav.html");
+  $("#navigation").load("navigation.html");
 });
 </script>
 
