--- a/glitch-room.html
+++ b/glitch-room.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-<div id="sidenav"></div>
+<div id="navigation"></div>
 <script type="text/javascript">
 $(function(){
-  $("#sidenav").load("sidenav.html");
+  $("#navigation").load("navigation.html");
 });
 </script>
 
@@ -26,22 +26,19 @@ $(function(){
 <h1 lang="zh">故障房间</h1>
 <br>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
-<img src="img/glitch-room-1.png" alt="">
+<img src="img/glitch-room/1-1sc.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 
 <section>
-  <h2>Info <span lang="zh">项目信息</span></h2>
+  <h2>Project Information <span lang="zh">项目信息</span></h2>
   <p class="list">
-    Self-Initiated Project
-    <span lang="zh">「自主项目」</span>
+    Type: MA Major Project
+    <span lang="zh">「类型：硕士毕业设计项目」</span>
     <br>
     Role: Researcher, Designer, Coder
     <span lang="zh">「角色：调研、设计、编程」</span>
     <br>
-    Location: London
-    <span lang="zh">「地点：伦敦」</span>
-    <br>
     Year: 2019
-    <span lang="zh">「时间：<span lang="en">2019 </span>年」</span>
+    <span lang="zh">「年份：<span lang="en">2019 </span>年」</span>
   </p>
 
   <h2>Project Description <span lang="zh">项目概述</span></h2>
@@ -59,6 +56,12 @@ $(function(){
     该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
   </p>
 </section>
+
+<div class="grid2 gridxto1">
+  <img src="img/glitch-room/2-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+  <img src="img/glitch-room/2-1s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+
+</div>
 
 </body>
 </html>
