--- a/navigation.html
+++ b/navigation.html
@@ -1,9 +1,9 @@
 <!-- html -------------------------------------------------------------------- -->
-<img id="menubtn" onclick="openNav()" src="img/menu.svg" alt="Menu">
+<img id="menubtn" onclick="openNav()" src="img/icon/menu.svg" alt="Menu">
 
 <div id="sidenav">
   <nav>
-    <img id="closebtn" onclick="closeNav()" src="img/close.svg" alt="Close">
+    <img id="closebtn" onclick="closeNav()" src="img/icon/close.svg" alt="Close">
     <br>
     <p>
       <a href="index.html">
