--- a/glitch-room.html
+++ b/glitch-room.html
@@ -66,6 +66,10 @@ $(function(){
   <img src="img/glitch-room/3-3s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
   <img src="img/glitch-room/3-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 </div>
+<div class="grid2 gridxto1">
+  <img src="img/glitch-room/4-1s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+  <img src="img/glitch-room/4-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+</div>
 
 </body>
 </html>
