--- a/glitch-room.html
+++ b/glitch-room.html
@@ -17,7 +17,7 @@ $(function(){
 </script>
 
 <section>
-  <p>An interactive VR site for the generation of customised glitching patterns.
+  <p>An interactive VR site which generates customised glitching patterns.
     <span lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</span>
   </p>
 </section>
