--- a/glitch-room.html
+++ b/glitch-room.html
@@ -58,7 +58,15 @@ $(function(){
 </section>
 
 <img src="img/glitch-room/2-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+<img src="img/glitch-room/6-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 <img src="img/glitch-room/3-1s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+<img src="img/glitch-room/7-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+<img src="img/glitch-room/5-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+<p>Browser screenshots from glitchroom.com.</p>
+<div class="" style="margin-top: 40vh;">
+
+</div>
+
 
 </body>
 </html>
