--- a/glitch-room.html
+++ b/glitch-room.html
@@ -57,12 +57,15 @@ $(function(){
   </p>
 </section>
 
-<img src="img/glitch-room/2-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+<img src="img/glitch-room/2-1sc.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 <img src="img/glitch-room/6-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
-<img src="img/glitch-room/3-1s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
-<img src="img/glitch-room/7-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+
 <img src="img/glitch-room/5-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
-<p>Browser screenshots from glitchroom.com.</p>
+<img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+
+<p class="img">Screenshots of 3D models in VR view on glitchroom.com.
+  <span lang="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</span>
+</p>
 <div class="" style="margin-top: 40vh;">
 
 </div>
