--- a/glitch-room.html
+++ b/glitch-room.html
@@ -17,9 +17,8 @@ $(function(){
 </script>
 
 <section>
-  <p>An interactive VR site which generates customised glitching patterns.
-    <span lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</span>
-  </p>
+  <p>An interactive VR site which generates customised glitching patterns.<p>
+  <p lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
 </section>
 
 <h1>Glitch Room</h1>
@@ -30,7 +29,7 @@ $(function(){
 
 <section>
   <h2>Project Information <span lang="zh">项目信息</span></h2>
-  <p class="list">
+  <p>
     Type: MA Major Project
     <span lang="zh">「类型：硕士毕业设计项目」</span>
     <br>
@@ -42,7 +41,7 @@ $(function(){
   </p>
 
   <h2>Project Description <span lang="zh">项目概述</span></h2>
-  <p>
+  <p class="paragraph">
     Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
     <br>
     The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
@@ -50,7 +49,7 @@ $(function(){
     A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
     <br>
   </p>
-  <p lang="zh">
+  <p lang="zh" class="paragraph">
     故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
     <br>
     该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
@@ -63,9 +62,9 @@ $(function(){
 <img src="img/glitch-room/5-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 <img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 
-<!-- <p class="img">Screenshots of 3D models in VR view on glitchroom.com.
+<!-- <h6>Screenshots of 3D models in VR view on glitchroom.com.
   <span lang="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</span>
-</p> -->
+</h6> -->
 <div class="" style="margin-top: 40vh;">
 
 </div>
