--- a/glitch-room.html
+++ b/glitch-room.html
@@ -37,7 +37,7 @@ $(function(){
     <span lang="zh">「角色：调研、设计、编程」</span>
     <br>
     Year: 2019
-    <span lang="zh">「年份：<span lang="en">2019 </span>年」</span>
+    <span lang="zh">「年份：<span lang="en">2019 </span>」</span>
   </p>
 
   <h2>Project Description <span lang="zh">项目概述</span></h2>
@@ -65,9 +65,19 @@ $(function(){
 <!-- <h6>Screenshots of 3D models in VR view on glitchroom.com.
   <span lang="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</span>
 </h6> -->
-<div class="" style="margin-top: 40vh;">
+<div class="" style="margin-top: 40vh;"></div>
 
-</div>
+<!-- <section>
+  <p style="float:left;">
+    <a href="#"><&nbsp;&nbsp;Previous Project</a>
+    &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="#">Next Project&nbsp;&nbsp;></a>
+  </p>
+  <p style="float:right;">
+    <a href="#">Back to Top</a>
+  </p>
+</section> -->
+
 
 
 </body>
