--- a/glitch-room.html
+++ b/glitch-room.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>NORA ZHAO 赵子娴「GLITCH ROOM 故障房间」</title>
+<title>NORA ZHAO 赵子娴 · GRAPHIC DESIGNER 平面设计师</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,31 +17,38 @@ $(function(){
 </script>
 
 <section>
-  <p>An interactive VR site which generates customised glitching patterns.<p>
-  <p lang="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
+  <p class="en">An interactive VR site which generates customised glitching patterns.<p>
+  <p class="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
 </section>
 
-<h1>Glitch Room</h1>
-<h1 lang="zh">故障房间</h1>
+<h1 class="en">Glitch Room</h1>
+<h1 class="zh">故障房间</h1>
 <br>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
 <img src="img/glitch-room/1-1sc.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 
 <section>
-  <h2>Project Information <span lang="zh">项目信息</span></h2>
-  <p>
+  <h2 class="en">Project Information</h2>
+  <h2 class="zh">项目信息</h2>
+  <p class="en">
     Type: MA Major Project
-    <span lang="zh">「类型：硕士毕业设计项目」</span>
     <br>
     Role: Researcher, Designer, Coder
-    <span lang="zh">「角色：调研、设计、编程」</span>
     <br>
     Year: 2019
-    <span lang="zh">「年份：<span lang="en">2019 </span>」</span>
   </p>
 
-  <h2>Project Description <span lang="zh">项目概述</span></h2>
-  <p class="paragraph">
+  <p class="zh">
+    类型：硕士毕业设计项目
+    <br>
+    角色：调研、设计、编程
+    <br>
+    年份：<span lang="en">2019</span>
+  </p>
+
+  <h2 class="en">Project Description</h2>
+  <h2 class="zh">项目概述</h2>
+  <p class="en text">
     Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
     <br>
     The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
@@ -49,10 +56,11 @@ $(function(){
     A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
     <br>
   </p>
-  <p lang="zh" class="paragraph">
+  <p class="zh text">
     故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
     <br>
     该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
+    <br>
   </p>
 </section>
 
@@ -62,21 +70,25 @@ $(function(){
 <img src="img/glitch-room/5-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 <img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 
-<!-- <h6>Screenshots of 3D models in VR view on glitchroom.com.
-  <span lang="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</span>
-</h6> -->
 <div class="" style="margin-top: 40vh;"></div>
 
-<!-- <section>
-  <p style="float:left;">
-    <a href="#"><&nbsp;&nbsp;Previous Project</a>
-    &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="#">Next Project&nbsp;&nbsp;></a>
-  </p>
-  <p style="float:right;">
+<section>
+  <p class="en">
+    <a href="#">Previous Project</a>
+    &nbsp;&nbsp;·&nbsp;&nbsp;
     <a href="#">Back to Top</a>
+    &nbsp;&nbsp;·&nbsp;&nbsp;
+    <a href="#">Next Project</a>
   </p>
-</section> -->
+
+  <p class="zh">
+    <a href="#">上个项目</a>
+    ·
+    <a href="#">回到页面顶部</a>
+    ·
+    <a href="#">下个项目</a>
+  </p>
+</section>
 
 
 
