--- a/glitch-room.html
+++ b/glitch-room.html
@@ -19,17 +19,10 @@ $(function(){
 <section>
   <p class="en">An interactive VR site which generates customised glitching patterns.<p>
   <p class="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
-</section>
 
-<h1 class="en">Glitch Room</h1>
-<h1 class="zh">故障房间</h1>
-<br>
-<!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
-<img src="img/glitch-room/1-1sc.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+  <!-- <h2 class="en">Project Information</h2>
+  <h2 class="zh">项目信息</h2> -->
 
-<section>
-  <h2 class="en">Project Information</h2>
-  <h2 class="zh">项目信息</h2>
   <p class="en">
     Type: MA Major Project
     <br>
@@ -45,9 +38,17 @@ $(function(){
     <br>
     年份：<span lang="en">2019</span>
   </p>
+</section>
 
-  <h2 class="en">Project Description</h2>
-  <h2 class="zh">项目概述</h2>
+<h1 class="en">Glitch Room</h1>
+<h1 class="zh">故障房间</h1>
+<br>
+<!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
+<img src="img/glitch-room/1-1sc.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+
+<section>
+  <!-- <h2 class="en">About the Project</h2>
+  <h2 class="zh">项目概述</h2> -->
   <p class="en text">
     Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
     <br>
