--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ $(function(){
 </script>
 
 <section>
-  <p class="en">Hello there, welcome to my portfolio site.</p>
-  <p class="zh">你好，欢迎访问我的作品集网站。</p>
+  <p class="en">I'm a designer. My pratice can be found across the area of generative design, branding and conventional graphic design.</p>
+  <p class="zh">我是一名设计师。我实践的领域包括衍生式设计、品牌设计和传统的平面设计。</p>
 </section>
 
 <h1 class="en">Nora Zhao</h1>
@@ -27,18 +27,18 @@ $(function(){
 <img src="img/glitch-room-2.png" alt="">
 
 <section>
-  <h2 class="en">About Me</h2>
-  <h2 class="zh">个人简介</h2>
+  <!-- <h2 class="en">About Me</h2>
+  <h2 class="zh">个人简介</h2> -->
 
   <p class="en text">
-    My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found in the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+    My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
     <br>
     I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communication Design (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
     <br>
   </p>
 
   <p class="zh text">
-    我叫赵子娴，是一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域为衍生式设计、品牌设计和传统平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
+    我叫赵子娴，是一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括衍生式设计、品牌设计和传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
     <br>
     我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
   </p>
